--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,7 @@ name: Update FDA data
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 14 * * 1"
+    - cron: "0 14 1 * *"
 
 permissions:
   contents: write
